# type_python

./: .flake8  README.md  pyproject.toml
examples/: enum_example.py
mypy_example/: get_starred.py  type_hints_cheat_sheet.py
mypy_example/type_system/: built_types.py  generics.py  kind_of_types.py  protocol.py  type_interface.py
pydantic/: exporting_models.py  model_config.py  schema.py  test_pydantic.py  validators.py
pydantic/fields_type/: example1.py
pydantic/models/: example1.py  example2.py
type_hint/: type_hint_examples.py
