[tool.poetry]
name = "typepython"
version = "0.1.0"
description = ""
authors = ["alexanderlozovoy <a.litovsky@smartypay.io >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3.0"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
